--- a/golang1.5/Dockerfile
+++ b/golang1.5/Dockerfile
@@ -6,6 +6,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 		gcc \
 		libc6-dev \
 		make \
+		clang-format-3.5 \
 	&& rm -rf /var/lib/apt/lists/*
 
 ENV GOLANG_VERSION 1.5.3
