switch to ubuntu as the base image

--- a/golang1.5/Dockerfile
+++ b/golang1.5/Dockerfile
@@ -1,4 +1,4 @@
-FROM buildpack-deps:jessie-scm
+FROM ubuntu:14.04
 
 # gcc for cgo
 RUN apt-get update && apt-get install -y --no-install-recommends \
